added merge to the development

--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Accenture</h1>
+    <h1>Accenture Solutions</h1>
     <ul>
-        <li>Tech</li>
-        <li>Consult</li>
-        <li>Outsource</li>
+        <li>tech</li>
+        <li>consult</li>
+        <li>outsource</li>
     </ul>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo, blanditiis.</p>
 </body>
 </html>
