--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Accenture Solutions</h1>
+    <h1>Accenture High Performance</h1>
     <ul>
         <li>tech</li>
         <li>consult</li>
