--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <h1>Accenture High Performance</h1>
     <ul>
         <li>tech</li>
-        <li>consult</li>
-        <li>outsource</li>
+        <li>Consult</li>
+        <li>Outsource</li>
     </ul>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo, blanditiis.</p>
 </body>
